[gd_scene load_steps=9 format=3 uid="uid://n2wlxqvbglfl"]

[ext_resource type="Theme" uid="uid://c3hg6ndkr8syx" path="res://themes/trivitime.tres" id="1_syxng"]
[ext_resource type="FontFile" uid="uid://btmrxohxjovqk" path="res://assets/fonts/Comfortaa/Comfortaa-VariableFont_wght.ttf" id="2_bg0nk"]
[ext_resource type="Script" path="res://scripts/trivitime/tt_question_creator.gd" id="2_q63cv"]
[ext_resource type="Texture2D" uid="uid://8ajkhrhx0srr" path="res://assets/sprites/caret-down-solid.svg" id="4_nl67w"]
[ext_resource type="PackedScene" uid="uid://d07oe55owlkpm" path="res://scenes/scene_button.tscn" id="4_oxj6s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k5e48"]
bg_color = Color(0.419608, 0.580392, 0.219608, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axyl7"]
content_margin_left = 6.0
content_margin_right = 6.0
bg_color = Color(0.360784, 0.509804, 0.164706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqfnh"]
content_margin_left = 6.0
content_margin_top = 6.0
content_margin_right = 6.0
content_margin_bottom = 6.0
bg_color = Color(0.360784, 0.509804, 0.164706, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="tt_question_creator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_syxng")
script = ExtResource("2_q63cv")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.54902, 0.733333, 0.321569, 1)

[node name="title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -633.0
offset_top = 22.0
offset_right = 633.0
offset_bottom = 116.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.25098)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 8
theme_override_font_sizes/font_size = 84
text = "Pack Creator"
horizontal_alignment = 1

[node name="Question" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
offset_left = 966.0
offset_top = 188.0
offset_right = 1880.0
offset_bottom = 388.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k5e48")
metadata/ChangedQuestion = ""

[node name="QuestionInput" type="TextEdit" parent="Question"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 903.0
offset_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bg0nk")
theme_override_styles/normal = SubResource("StyleBoxFlat_axyl7")
placeholder_text = "Question"
wrap_mode = 1

[node name="AnswerGrid" type="GridContainer" parent="Question"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -446.0
offset_top = -154.0
offset_right = 446.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12
columns = 2

[node name="AnsInput1" type="TextEdit" parent="Question/AnswerGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bg0nk")
theme_override_styles/normal = SubResource("StyleBoxFlat_tqfnh")
placeholder_text = "Correct Answer"
wrap_mode = 1
metadata/ChangedAnswer = ""
metadata/pos = 0

[node name="AnsInput2" type="TextEdit" parent="Question/AnswerGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bg0nk")
theme_override_styles/normal = SubResource("StyleBoxFlat_tqfnh")
placeholder_text = "Fake Answer"
wrap_mode = 1
metadata/ChangedAnswer = ""
metadata/pos = 0

[node name="AnsInput3" type="TextEdit" parent="Question/AnswerGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bg0nk")
theme_override_styles/normal = SubResource("StyleBoxFlat_tqfnh")
placeholder_text = "Fake Answer"
wrap_mode = 1
metadata/ChangedAnswer = ""
metadata/pos = 0

[node name="AnsInput4" type="TextEdit" parent="Question/AnswerGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bg0nk")
theme_override_styles/normal = SubResource("StyleBoxFlat_tqfnh")
placeholder_text = "Fake Answer"
wrap_mode = 1
metadata/ChangedAnswer = ""
metadata/pos = 0

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_left = 40.0
offset_top = 133.0
offset_right = 1872.0
offset_bottom = 967.0

[node name="MainHBox" type="HBoxContainer" parent="Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -916.0
offset_top = -779.0
offset_right = 924.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12

[node name="FilePreview" type="CodeEdit" parent="Main/MainHBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_colors/line_number_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_fonts/font = ExtResource("2_bg0nk")
theme_override_font_sizes/font_size = 24
editable = false
gutters_draw_line_numbers = true

[node name="questions" type="VBoxContainer" parent="Main/MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="ScrollContainer" type="ScrollContainer" parent="Main/MainHBox/questions"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panels" type="VBoxContainer" parent="Main/MainHBox/questions/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PageControls" type="HBoxContainer" parent="Main/MainHBox/questions"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 17
alignment = 1

[node name="First" type="Button" parent="Main/MainHBox/questions/PageControls"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "<<"

[node name="Back" type="Button" parent="Main/MainHBox/questions/PageControls"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "<"

[node name="PageNum" type="LineEdit" parent="Main/MainHBox/questions/PageControls"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "1"
alignment = 1

[node name="Next" type="Button" parent="Main/MainHBox/questions/PageControls"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ">"

[node name="Last" type="Button" parent="Main/MainHBox/questions/PageControls"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ">>"

[node name="AdditionalInfo" type="Label" parent="Main"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -19.0
offset_right = 40.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24

[node name="Import" type="Button" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 993.0
offset_right = 179.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 24
text = "Import"

[node name="Import" type="FileDialog" parent="Import"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(400, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="Export" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 993.0
offset_right = 331.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 24
text = "Export"

[node name="Export" type="FileDialog" parent="Export"]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(405, 400)
ok_button_text = "Export"
filters = PackedStringArray("*json")

[node name="SceneButton" parent="." instance=ExtResource("4_oxj6s")]
layout_mode = 0
offset_left = 40.0
offset_top = 27.0
offset_right = 101.0
offset_bottom = 86.0
rotation = 6.28319
icon = ExtResource("4_nl67w")
flat = true
icon_alignment = 1
expand_icon = true
Scene = "res://scenes/trivitime/tt_config.tscn"
color = Color(0.34902, 0.52549, 0.278431, 1)

[connection signal="text_changed" from="Main/MainHBox/FilePreview" to="." method="update"]
[connection signal="pressed" from="Main/MainHBox/questions/PageControls/First" to="." method="first_page"]
[connection signal="pressed" from="Main/MainHBox/questions/PageControls/Back" to="." method="back_page"]
[connection signal="text_submitted" from="Main/MainHBox/questions/PageControls/PageNum" to="." method="set_page"]
[connection signal="pressed" from="Main/MainHBox/questions/PageControls/Next" to="." method="next_page"]
[connection signal="pressed" from="Main/MainHBox/questions/PageControls/Last" to="." method="final_page"]
[connection signal="pressed" from="Import" to="." method="prompt_input"]
[connection signal="file_selected" from="Import/Import" to="." method="import"]
[connection signal="pressed" from="Export" to="." method="prompt_export"]
[connection signal="file_selected" from="Export/Export" to="." method="export"]
